add /plushies/ranking
