# api/swagger-output.json
@@ -180,6 +180,19 @@
         }
       }
     },
+    "/plushies/ranking": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
     "/users/me": {
       "get": {
         "description": "",
